# 3DOF_Manipulator_Robot_ROS2

./: .gitignore
src/cmbot_bringup/: CMakeLists.txt  package.xml
src/cmbot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/cmbot_controller/: CMakeLists.txt  cmbot_controller.xml  package.xml
src/cmbot_controller/config/: cmbot_controllers.yaml
src/cmbot_controller/include/cmbot_controller/: cmbot_interface.hpp
src/cmbot_controller/launch/: controller.launch.py
src/cmbot_controller/src/: cmbot_interface.cpp
src/cmbot_description/: CMakeLists.txt  package.xml
src/cmbot_description/launch/: display.launch.py  gazebo.launch.py
src/cmbot_description/rviz/: cmbotdisplay.rviz
src/cmbot_description/urdf/: Cmbot.proto  cmbot.urdf  cmbot.urdf.xacro  cmbot_gazebo.xacro  cmbot_ros2_conrol.xacro
src/cmbot_firmware/: CMakeLists.txt  package.xml
src/cmbot_firmware/firmware/blink_test/: blink_test.ino
src/cmbot_firmware/src/: simple_serial_receiver.cpp  simple_serial_transmitter.cpp
src/cmbot_moveit/: CMakeLists.txt  package.xml
src/cmbot_moveit/config/: cmbot.srdf
src/cmbot_moveit/launch/: moveit.launch.py
src/cmbot_remote/: CMakeLists.txt  package.xml
src/cmbot_remote/cmbot_remote/: alexa_interface.py
src/cmbot_remote/launch/: remote_interface.launch.py
src/cmbot_remote/src/: task_server.cpp
src/cmbot_utils/: CMakeLists.txt  package.xml
src/cmbot_utils/src/: angle_conversion.cpp
src/cmbott_msgs/: CMakeLists.txt  package.xml
src/cmbott_msgs/srv/: AddTwoInts.srv  QuaternionToEuler.srv
(+2 files in other folders)
